<resources>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="access">Acceder</string>
    <string name="close">Cerrar</string>
    <string name="refuse">Rechazar</string>
    <string name="hour">Hora</string>
    <string name="date">Fecha</string>
    <string name="welcome">Bienvenido</string>
    <string name="save">Guardar</string>
    <string name="sponsors">Patrocinadores</string>
    <string name="preferences_menu">Preferencias</string>
    <string name="setting_menu">Configuración</string>
    <string name="notifications_menu">Notificaciones</string>
    <string name="help_menu">Ayúdanos a mejorar</string>
    <string name="about_menu">Acerca de</string>
    <string name="version_menu">Versión: %1$s</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_news">Noticias</string>
    <string name="tab_apps">Apps</string>
    <string name="tab_more">Más</string>
    <string name="btn_open">Abrir</string>
    <string name="btn_download">Descargar</string>
    <string name="splash_title">¡Bienvenido!</string>
    <string name="splash_text">Información sobre la actualidad sanitaria y catálogo de apps sobre salud y trámites sanitarios del Sistema Sanitario Público de Andalucía</string>
    <string name="home_news_section_title">Noticias destacadas</string>
    <string name="home_apps_section_title">Apps recomendadas</string>
    <string name="menu_appointment">Citas</string>
    <string name="toolbar_button_label"></string>
    <string name="news_section_title">Todas las noticias</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet consectetur adipiscing elit eleifend laoreet diam, fringilla nibh morbi sollicitudin tristique neque rhoncus lobortis risus curabitur, augue arcu ullamcorper accumsan eros maecenas interdum hendrerit faucibus.\n\nCursus tincidunt ultrices suspendisse diam netus est aliquam malesuada, cras nostra montes metus eleifend nullam laoreet vel mi, posuere fames sem inceptos aliquet molestie orci.</string>
    <string name="app_details_btn_download_open">Abrir</string>
    <string name="app_details_btn_download_download">Descargar</string>
    <string name="app_details_icon_description">Icono de aplicación</string>
    <string name="title_fragment_apps">Todas las aplicaciones</string>
    <string name="subtitle_fragment_apps">Lorem ipsum dolor sit amet, consectur, adpiscing elit.</string>
    <string name="share">Compartir</string>
    <string name="coronavirus_fragment">Test coronavirus</string>
    <string name="coronavirus_card_title">Asistencia de información COVID-19</string>
    <string name="coronavirus_card_subtitle">Pulse aquí para acceder al chat</string>
    <string name="news_error">No se han podido cargar las noticias</string>
    <string name="announcement_error">No se han podido cargar los banners</string>
    <string name="legal_advise_menu">Aviso legal</string>
    <string name="terms_and_conditions">Términos y condiciones</string>
    <string name="legal_text">En cumplimiento de lo dispuesto en el  Reglamento (UE) 2016/679 General de Protección de Datos
        y demás normativa conexa, el Servicio Andaluz de Salud (SAS), como responsable del tratamiento, le informa que los
        datos obtenidos a través de esta aplicación, en adelante "Salud Andalucía", serán tratados con la finalidad de gestionar
        su relación con el servicio sanitario público de Andalucía (comunicaciones personales, evaluaciones de salud,
        seguimiento profesional, recomendaciones, etc).\n\n
        Sus datos serán respaldados en servidores propios o bajo nuestro control, pudiendo ser tratados por prestadores de servicios
        en calidad de encargados del tratamiento, no previéndose comunicaciones de datos a terceros salvo las legalmente establecidas.
        Podrá ejercer sus derechos de acceso, rectificación, oposición, supresión o cualquier otro reconocido, a través de la misma
        aplicación o como se indica en la información ampliada*.\n\n
        Puede consultar cualquier cuestión relacionada con la protección de sus datos personales a través de la dirección de correo
        dpd.sspa@juntadeandalucia.es. Si acepta lo anterior, haga clic en el botón "estoy de acuerdo" para continuar.\n\n
        (*) https://www.sspa.juntadeandalucia.es/servicioandaluzdesalud/politica-de-privacidad
</string>
    <string name="legal_check_agreement">Estoy de acuerdo</string>
    <string name="contact_information">Información de contacto</string>
    <string name="nuhsa">Nº de Tarjeta Sanitaria</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="id">Documento de identificación</string>
    <string name="dni" translatable="false">DNI</string>
    <string name="nie" translatable="false">NIE</string>
    <string name="enter">Entrar</string>
    <string name="enter_id">Introduzca su nº de documento</string>
    <string name="enter_birthdate" translatable="false">dd/mm/aaaa</string>
    <string name="nuhsa_helper">Puede encontrarlo en su tarjeta sanitaria</string>
    <string name="error_nuhsa">El Nº de tarjeta sanitaria debe componerse del prefijo AN y 10 dígitos</string>
    <string name="error_birthday">Introduzca una fecha válida</string>
    <string name="identifier_error">El documento de identificación no es válido</string>
    <string name="dni_error">El DNI no es válido</string>
    <string name="nie_error">El NIE no es válido</string>
    <string name="quiz_fragment">Cuestionario</string>
    <string name="quiz_not_available">Según el protocolo definido, usted podrá realizar de nuevo el test a partir de las %1$s.</string>
    <string name="send_quiz">Enviar respuestas</string>
    <string name="enter_answer">Introduzca la respuesta</string>
    <string name="enter_other_answer">Otros…</string>
    <string name="answer">Respuesta</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="no_dont_know">No/No sé</string>
    <string name="quiz_disclaimer">Para poder enviar el cuestionario debe haber contestado a todas las preguntas</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_error_text">Se ha producido un error. Por favor, inténtelo de nuevo más tarde.</string>
    <string name="send_notification_error_text">Se ha producido un error. Por favor, inténtelo de nuevo más tarde.</string>
    <string name="quiz_confirm_dialog_title">Atención</string>
    <string name="quiz_confirm_dialog_message">Una vez aceptado, el seguimiento quedará registrado y no podrá ser modificado ni borrado. ¿Está seguro de la información registrada?</string>
    <string name="quiz_send_info_preview">Una vez aceptado, la encuesta quedará registrada y no podrá ser modificado ni borrado. ¿Está seguro de la información registrada?</string>
    <string name="quiz_result_fragment">Recomendaciones</string>
    <string name="quiz_not_available_header">Test no disponible</string>
    <string name="quiz_result_advice">Recomendaciones</string>
    <string name="quiz_result_close">Cerrar test</string>
    <string name="enter_nuhsa">Introduzca el Nº de tarjeta sanitaria</string>
    <string name="error_login_pin">El pin introducido no es válido.</string>
    <string name="error_login_fields">Los datos introducidos no son válidos. Por favor, consulte con su centro de salud cómo corregirlos.</string>
    <string name="error_login_phone">Para completar su identificación es necesario que disponga de un teléfono móvil de contacto en la base de datos de usuarios del Servicio Andaluz de Salud. Por favor, compruebe su ficha en la web de <a href="https://www.sspa.juntadeandalucia.es/servicioandaluzdesalud/clicsalud/pages/anonimo/personales/datoscontacto.jsf?opcionSeleccionada=MUCAMBIODATOSCONTACTO">ClicSalud+</a> o consulte en su centro de salud.</string>
    <string name="phone">Teléfono</string>
    <string name="error_login_protected_user">Figura usted en nuestra base de datos como persona con datos especialmente protegidos, por lo que no puede utilizar los servicios en línea identificándose únicamente con datos personales.</string>
    <string name="enter_phone">Introduzca su teléfono</string>
    <string name="error_phone">El teléfono no es válido</string>
    <string name="apps_error">No se han podido cargar las aplicaciones</string>
    <string name="prefix">Prefijo</string>
    <string name="country">País</string>
    <string name="error_prefix">Introduzca un código de país</string>
    <string name="news_empty">No existen noticias en estos momentos</string>
    <string name="apps_empty">No existen aplicaciones para mostrar en estos momentos</string>
    <string name="apps_no_result">No existen aplicaciones que coincidan con el criterio de búsqueda establecido</string>
    <string name="save_user">Recordar información para la autoevaluación del COVID-19</string>
    <string name="user_promt_title">Recuperar usuarios guardados</string>
    <string name="user_prompt_save_title">Guardar persona</string>
    <string name="user_prompt_save_subtitle">Desbloquee su móvil para guardar la persona</string>
    <string name="user_promt_subtitle">Desbloquee su móvil para recuperar los usuarios guardados</string>
    <string name="wallet_unlock_title"> Acceso a almacén de certificados</string>
    <string name="wallet_unlock_subtitle">Proporcione sus credenciales para acceder</string>
    <string name="unlock_error">Error al desbloquear</string>
    <string name="notification_quiz">En función del protocolo actual, y en caso de que lo necesite, ya puede realizar una nueva autoevaluación del COVID-19.</string>
    <string name="second_factor_title">Comprobación teléfono</string>
    <string name="code_sms">Código de verificación SMS</string>
    <string name="enter_code">Introduzca el código</string>
    <string name="sms_explain">Hemos enviado un código de verificación a su teléfono mediante SMS. Introdúzcalo para continuar</string>
    <string name="continue_str">Continuar</string>
    <string name="error_max_logins">Ha alcanzado el número máximo de intentos para verificar su número de teléfono. Por favor, confirme el número de teléfono y vuelva a intentarlo más tarde.</string>
    <string name="error_login_default">Se ha producido un error al iniciar sesión. Por favor, inténtelo de nuevo más tarde.</string>
    <string name="form_input_errors">Existe algún error en los datos introducidos. Por favor, revíselos e inténtelo de nuevo.</string>
    <string name="login_code_error">El código introducido es incorrecto. Por favor, introduzca un código de verificación correcto</string>
    <string name="preferences_verification_title">Verificación</string>
    <string name="preferences_verification_step_1">Paso 1 de 2</string>
    <string name="preferences_verification_phone_disclaimer">Introduce aquí tu número de móvil y te mandaremos un código de verificación</string>
    <string name="videocall_permission_description">Conceda este permiso para habilitar la comunicación mediante videollamada con su profesional sanitario.</string>
    <string name="videocall_permission_tittle">Videollamada (próx.)</string>
    <string name="notification_permission_description">Recepción de notificaciones en segundo plano.</string>
    <string name="notification_permission_tittle">Datos en segundo plano</string>
    <string name="permission_dialog_description">Para poder disponer de todas las funcionalidades de la aplicación es necesario que se concedan algunos permisos:</string>
    <string name="permission_dialog_tittle">Permisos de aplicación</string>
    <string name="permission_description">En esta sección, le explicamos cuál es el objetivo de los permisos sensibles que concede a la aplicación. Además de explicar su uso, tambien indicamos cómo tratamos los datos asociados a dichos permisos.</string>
</resources>