<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_rounded_rect">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/llPopupMainLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true">

        <ImageView
            android:id="@id/imageview_permission_dialog"
            android:layout_width="@dimen/dialog_icon_size"
            android:layout_height="@dimen/dialog_icon_size"
            android:layout_marginTop="@dimen/margin_default_quadruple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_alert_info" />

        <TextView
            android:id="@+id/title_tv"
            style="@style/TitleText.PermisionDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default_horizontal"
            android:layout_marginTop="@dimen/margin_default_triple"
            android:gravity="center"
            android:text="@string/permission_dialog_tittle"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_permission_dialog" />

        <ImageView
            android:id="@+id/permission_info_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/title_tv"
            app:layout_constraintTop_toTopOf="@+id/title_tv" />
        <TextView
            android:id="@+id/message_tv"
            style="@style/DialogSubtitleText.PermissionDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default_horizontal"
            android:layout_marginTop="@dimen/margin_default_triple"
            android:text="@string/permission_dialog_description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />


        <TextView
            android:id="@+id/background_perm_tittle_tv"
            style="@style/SubtitleText.PermissionDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default_triple"
            android:layout_marginTop="@dimen/margin_default_triple"
            android:text="@string/notification_permission_tittle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message_tv" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/background_permission_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default_horizontal"
            app:layout_constraintBaseline_toBaselineOf="@+id/background_perm_tittle_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/background_perm_tittle_tv" />

        <TextView
            android:id="@+id/background_perm_description_tv"
            style="@style/DialogSubtitleText.PermissionDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default_horizontal"
            android:layout_marginTop="@dimen/margin_default_quarter"
            android:text="@string/notification_permission_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_perm_tittle_tv" />


        <TextView
            android:id="@+id/videocall_perm_tittle_tv"
            style="@style/SubtitleText.PermissionDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default_triple"
            android:layout_marginTop="@dimen/margin_default_large"
            android:text="@string/videocall_permission_tittle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_perm_description_tv" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/videocall_permission_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default_horizontal"
            app:layout_constraintBaseline_toBaselineOf="@+id/videocall_perm_tittle_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/videocall_perm_tittle_tv" />

        <TextView
            android:id="@+id/videocall_perm_description_tv"
            style="@style/DialogSubtitleText.PermissionDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default_horizontal"
            android:layout_marginTop="@dimen/margin_default_quarter"
            android:text="@string/videocall_permission_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videocall_perm_tittle_tv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/close_btn"
            style="@style/PrimaryButton.ButtonDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_default_close_button"
            android:layout_marginTop="@dimen/margin_default_triple"
            android:layout_marginBottom="@dimen/margin_default_quadruple"
            android:text="@string/close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/videocall_perm_description_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
